--- a/books/записки_охотника/9f21.md
+++ b/books/записки_охотника/9f21.md
@@ -1,22 +1,24 @@
 ## 9 February 2021
 
-* **в качестве** - as a
-* **посещая** - visiting (pres. part. *посещать*)
-* **мелкий** - little, small
-* **помещик** - landowner, serfowner
-* **страстный** - passionate
-* **следовательно** - therefore
-* **водиться** - to be associate (with)
-* **слабость** - weakness
-* **сватать** - to propose
-* **богатый** - rich
-* **невеста** - marriageable woman
-* **отказ** - rejection
-* **сокрушённый** - sad, grieving
-* **доверять** - trust
-* **горе** - sadness, grief
-* **продолжать** - to continue
-* **посылать** - to send
-* **сырой** - unripe, raw, green
-* **произведение** - creation, product
-* **сад** - garden
+**Русский** | Part of Speech | **English** | Location
+------------|----------------|-------------|---------
+**в качестве** | - | as a | 6.2.1
+**посещая** | v. | visiting (pres. part. *посещать*) | 6.2.1
+**мелкий** | adj. | little, small | 6.2.3
+**помещик** | n. | landowner, serfowner | 6.2.3
+**страстный** | adj. | passionate | 6.2.3
+**следовательно** | - | therefore | 6.2.4
+**водиться** | v. | to be associate (with) | 6.2.4
+**слабость** | n. | weakness | 6.2.5
+**сватать** | v. | to propose | 6.2.6
+**богатый** | adj. | rich | 6.2.6
+**невеста** | n. | marriageable woman | 6.2.6
+**отказ** | n. | rejection | 6.2.7
+**сокрушённый** | adj. | sad, grieving | 6.2.7
+**доверять** | v. | to trust | 6.2.7
+**горе** | n. | sadness, grief | 6.2.8
+**продолжать** | v. | to continue | 6.2.9
+**посылать** | v. | to send | 6.2.9
+**сырой** | adj. | unripe, raw, green | 6.2.10
+**произведение** | n. | creation, product | 6.2.10
+**сад** | n. | garden | 6.2.10
