--- a/books/записки_охотника/9f21.md
+++ b/books/записки_охотника/9f21.md
@@ -1,24 +1,24 @@
 ## 9 February 2021
 
-**Русский** | Part of Speech | **English** | Location
+Русский | Part of Speech | English | Location
 ------------|----------------|-------------|---------
-**в качестве** | - | as a | 6.2.1
-**посещая** | v. | visiting (pres. part. *посещать*) | 6.2.1
-**мелкий** | adj. | little, small | 6.2.3
-**помещик** | n. | landowner, serfowner | 6.2.3
-**страстный** | adj. | passionate | 6.2.3
-**следовательно** | - | therefore | 6.2.4
-**водиться** | v. | to be associate (with) | 6.2.4
-**слабость** | n. | weakness | 6.2.5
-**сватать** | v. | to propose | 6.2.6
-**богатый** | adj. | rich | 6.2.6
-**невеста** | n. | marriageable woman | 6.2.6
-**отказ** | n. | rejection | 6.2.7
-**сокрушённый** | adj. | sad, grieving | 6.2.7
-**доверять** | v. | to trust | 6.2.7
-**горе** | n. | sadness, grief | 6.2.8
-**продолжать** | v. | to continue | 6.2.9
-**посылать** | v. | to send | 6.2.9
-**сырой** | adj. | unripe, raw, green | 6.2.10
-**произведение** | n. | creation, product | 6.2.10
-**сад** | n. | garden | 6.2.10
+**[в качестве](https://en.wiktionary.org/wiki/качестве#Russian)** | - | as a | 6.2.1
+**[посещая](https://en.wiktionary.org/wiki/посещая#Russian)** | v. | visiting (pres. part. *посещать*) | 6.2.1
+**[мелкий](https://en.wiktionary.org/wiki/мелкий#Russian)** | adj. | little, small | 6.2.3
+**[помещик](https://en.wiktionary.org/wiki/помещик#Russian)** | n. | landowner, serfowner | 6.2.3
+**[страстный](https://en.wiktionary.org/wiki/страстный#Russian)** | adj. | passionate | 6.2.3
+**[следовательно](https://en.wiktionary.org/wiki/следовательно#Russian)** | - | therefore | 6.2.4
+**[водиться](https://en.wiktionary.org/wiki/водиться#Russian)** | v. | to be associate (with) | 6.2.4
+**[слабость](https://en.wiktionary.org/wiki/слабость#Russian)** | n. | weakness | 6.2.5
+**[сватать](https://en.wiktionary.org/wiki/сватать#Russian)** | v. | to propose | 6.2.6
+**[богатый](https://en.wiktionary.org/wiki/богатый#Russian)** | adj. | rich | 6.2.6
+**[невеста](https://en.wiktionary.org/wiki/невеста#Russian)** | n. | marriageable woman | 6.2.6
+**[отказ](https://en.wiktionary.org/wiki/отказ#Russian)** | n. | rejection | 6.2.7
+**[сокрушённый](https://en.wiktionary.org/wiki/сокрушённый#Russian)** | adj. | sad, grieving | 6.2.7
+**[доверять](https://en.wiktionary.org/wiki/доверять#Russian)** | v. | to trust | 6.2.7
+**[горе](https://en.wiktionary.org/wiki/горе#Russian)** | n. | sadness, grief | 6.2.8
+**[продолжать](https://en.wiktionary.org/wiki/продолжать#Russian)** | v. | to continue | 6.2.9
+**[посылать](https://en.wiktionary.org/wiki/посылать#Russian)** | v. | to send | 6.2.9
+**[сырой](https://en.wiktionary.org/wiki/сырой#Russian)** | adj. | unripe, raw, green | 6.2.10
+**[произведение](https://en.wiktionary.org/произведение/посещая#Russian)** | n. | creation, product | 6.2.10
+**[сад](https://en.wiktionary.org/wiki/сад#Russian)** | n. | garden | 6.2.10
