--- a/books/записки_охотника/9f21.md
+++ b/books/записки_охотника/9f21.md
@@ -2,7 +2,7 @@
 
 Русский | Part of Speech | English | Location
 ------------|----------------|-------------|---------
-**[в качестве](https://en.wiktionary.org/wiki/качестве#Russian)** | - | as a | 6.2.1
+**[в качестве](https://en.wiktionary.org/wiki/качество#Russian)** | - | as a | 6.2.1
 **[посещая](https://en.wiktionary.org/wiki/посещая#Russian)** | v. | visiting (pres. part. *посещать*) | 6.2.1
 **[мелкий](https://en.wiktionary.org/wiki/мелкий#Russian)** | adj. | little, small | 6.2.3
 **[помещик](https://en.wiktionary.org/wiki/помещик#Russian)** | n. | landowner, serfowner | 6.2.3
